# ___bckp___

helix/: config.toml  languages.toml
kitty/: kitty.conf
stribog/: CMakeLists.txt
stribog/engine/: CMakeLists.txt
stribog/engine/src/: defines.h  platform.cpp  platform.h  vulkan_interface.h
stribog/testbed/: CMakeLists.txt
stribog/testbed/src/: main.cpp
